# release-on-push-action

./: .gitignore  Dockerfile  README.md  action.yml  entry.sh  pyproject.toml
.github/workflows/: pre-release.yml  release.yml
action/: __main__.py  mono.py
features/: monotonic-versions.feature  semver-versions.feature
features/steps/: steps.py
